# wagtail-umami-analytics

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: lint.yaml  test.yaml
example/: README.md  manage.py
example/core/: models.py  wagtail_hooks.py
example/core/migrations/: 0001_initial.py
example/core/templates/core/: content_page.html
example/example/: wsgi.py
example/example/settings/: base.py  dev.py
example/example/templates/: base.html
src/wagtail_umami_analytics/: apps.py  checks.py  client.py  models.py  panels.py  views.py
src/wagtail_umami_analytics/migrations/: 0001_initial.py
src/wagtail_umami_analytics/static/wagtail_umami_analytics/css/: page_analytics_panel.css
src/wagtail_umami_analytics/static/wagtail_umami_analytics/js/controllers/: analytics_metrics_controller.js  analytics_summary_controller.js  content_loader_controller.js  page_analytics_panel_controller.js
src/wagtail_umami_analytics/templates/wagtail_umami_analytics/: header.html  index.html
src/wagtail_umami_analytics/templates/wagtail_umami_analytics/panels/: umami_analytics_panel.html
src/wagtail_umami_analytics/templatetags/: umami_analytics_tags.py
tests/: conftest.py  factories.py  settings.py  test_analytics.py  test_analytics_tags.py  test_client.py  test_page_analytics.py  urls.py
